# compact-mcp

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/compact-mcp/: Cargo.toml
crates/compact-mcp-core/: Cargo.toml
crates/compact-mcp-core/src/: diagnostic.rs  error.rs  import_scan.rs  lib.rs  workspace.rs
crates/compact-mcp-core/src/analyze/: mod.rs  symbols.rs
crates/compact-mcp-core/src/artifacts/: contract_info.rs  mod.rs  scaffold.rs  zkir.rs
crates/compact-mcp-core/src/jobs/: gate.rs  mod.rs
crates/compact-mcp-core/src/toolchain/: compile.rs  fmt.rs  mod.rs  parse_diag.rs  proc.rs  versions.rs
crates/compact-mcp-core/tests/: drop_reap.rs  snapshots.rs
crates/compact-mcp-core/tests/snapshots/: snapshots__ast_module_and_export_list_shape_is_stable.snap  snapshots__ast_shape_is_stable.snap  snapshots__composite_witness_scaffold_output_is_stable.snap  snapshots__diagnostics_shape_is_stable.snap  snapshots__stats_shape_is_stable.snap  snapshots__symbols_module_and_export_list_shape_is_stable.snap  snapshots__symbols_shape_is_stable.snap  snapshots__witness_scaffold_output_is_stable.snap  snapshots__zkir_stats_shape_is_stable.snap
crates/compact-mcp/src/: config.rs  lib.rs  main.rs  server.rs  tasks.rs  testing.rs
crates/compact-mcp/src/tools/: analysis.rs  artifacts.rs  compile.rs  fmt.rs  mod.rs  toolchain.rs
crates/compact-mcp/src/transport/: http.rs  stdio.rs
crates/compact-mcp/tests/: cancellation.rs  gate_coverage.rs  http_transport.rs  mcp_protocol.rs  path_containment.rs  stdout_clean.rs  tasks.rs
crates/compact-mcp/tests/fixtures/: broken.compact  counter.compact
