[package]
name = "compact-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
compact-mcp-core.workspace = true
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
rmcp.workspace = true
semver.workspace = true
serde = { workspace = true }
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
rmcp = { workspace = true, features = ["client"] }
tempfile.workspace = true

[features]
toolchain-tests = ["compact-mcp-core/toolchain-tests"]
